ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:2:12
  |
2 | enum E3 { a: 1, }
  |            ^

error: An enum member cannot have a numeric name
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:2:14
  |
2 | enum E3 { a: 1, }
  |              ^

error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:15
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |               ^

error: An enum member cannot have a numeric name
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:17
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                 ^

error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:24
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                        ^

error: An enum member cannot have a numeric name
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:26
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                          ^

